ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"

spec:
  defaultBackend:
      service:
        name: internal-service
        port:
          number: 8080
  rules:
  - host : kubernetes.docker.internal
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: internal-service
            port:
              number: 8080
      - path: /rp
        pathType: Prefix
        backend:
          service:
            name: internal-service
            port:
              number: 8080
